--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,2 @@
-attrs==20.3.0
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-cryptography==41.0.2
-idna==3.4
-jellyfish==0.11.2
-lib50==3.0.7
-pexpect==4.8.0
-ptyprocess==0.7.0
-pycparser==2.21
+Pillow==10.0.0
 pygame-ce==2.3.0
-PyYAML==6.0.1
-requests==2.31.0
-submit50==3.1.1
-termcolor==1.1.0
-urllib3==2.0.4
