--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
-Pillow==10.0.0
+attrs==20.3.0
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+cryptography==41.0.2
+idna==3.4
+jellyfish==0.11.2
+joblib==1.3.1
+lib50==3.0.7
+numpy==1.25.2
+pexpect==4.8.0
+ptyprocess==0.7.0
+pycparser==2.21
 pygame-ce==2.3.0
+PyYAML==6.0.1
+requests==2.31.0
+scikit-learn==1.3.0
+scipy==1.11.1
+submit50==3.1.1
+termcolor==1.1.0
+threadpoolctl==3.2.0
+urllib3==2.0.4
